# CapstoneDesign

./: README.md
Jongseol_ws/: configuration.yaml
Jongseol_ws/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
Jongseol_ws/devel/include/Jongseol/: init.h  obj.h  objs.h
Jongseol_ws/devel/include/Total_msgs/: Control.h  Encoder.h
Jongseol_ws/devel/lib/Jongseol/: grid  main
Jongseol_ws/devel/lib/pkgconfig/: Jongseol.pc  Total_msgs.pc  serial_control.pc  serial_encoder.pc
Jongseol_ws/devel/share/Jongseol/cmake/: Jongseol-msg-paths.cmake  JongseolConfig.cmake
Jongseol_ws/devel/share/Total_msgs/cmake/: Total_msgs-msg-extras.cmake  Total_msgs-msg-paths.cmake  Total_msgsConfig.cmake
Jongseol_ws/devel/share/roseus/ros/Jongseol/: manifest.l
Jongseol_ws/devel/share/serial_control/cmake/: serial_controlConfig.cmake
Jongseol_ws/devel/share/serial_encoder/cmake/: serial_encoderConfig.cmake
Jongseol_ws/src/Jongseol/: CMakeLists.txt  README.md  package.xml
Jongseol_ws/src/Jongseol/GridMap/: 278Grid.txt  513Grid.txt
Jongseol_ws/src/Jongseol/map/: LabPath2.txt  LanePath.txt
Jongseol_ws/src/Jongseol/msg/: init.msg  obj.msg  objs.msg
Jongseol_ws/src/Jongseol/src/: main.cpp
Jongseol_ws/src/Jongseol/src/control/: control.cpp  control.h
Jongseol_ws/src/Jongseol/src/global/: global.cpp  global.h
Jongseol_ws/src/Jongseol/src/grid/: grid.cpp
Jongseol_ws/src/Jongseol/src/imu/: imu.cpp  imu.h
Jongseol_ws/src/Jongseol/src/lidar/: lidar.cpp  lidar.h
Jongseol_ws/src/Jongseol/src/parser/: parser.cpp  parser.h
Jongseol_ws/src/Jongseol/src/planning/: planning.cpp  planning.h
Jongseol_ws/src/Total_msgs/: CMakeLists.txt
Jongseol_ws/src/Total_msgs/msg/: Control.msg  Encoder.msg
Jongseol_ws/src/serial_control/: CMakeLists.txt  package.xml
Jongseol_ws/src/serial_control/src/: serial_control_test.py
Jongseol_ws/src/serial_encoder/: CMakeLists.txt
Livox_ws/devel/: .catkin  .rosinstall  setup.sh
Livox_ws/devel/lib/pkgconfig/: livox_ros_driver2.pc
Livox_ws/devel/share/livox_ros_driver2/cmake/: livox_ros_driver2-msg-extras.cmake  livox_ros_driver2-msg-paths.cmake  livox_ros_driver2Config.cmake
Livox_ws/src/livox_ros_driver2/config/: MID360_config.json
arduino/ECU_Control/: ECU_Control.ino
arduino/ECU_Encoder/: ECU_Encoder.ino
dependencies/: Readme.md
test/: controller_test.py  ttyUSB_manual.txt  tty_setup.sh
(+41 files in other folders)
